--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,6 +13,7 @@
     padding-left: 0.7em;
     padding-right: 1em;
     margin-right: .3em;
+    margin-top: .3em;
     &:hover{
         transform: scale(1.1,1.1);
     }
@@ -23,4 +24,9 @@
     &:hover{
         text-decoration: none;
     }
+}
+
+.post-content {
+  margin: 1em;
+  margin-left: 2em;
 }
