--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,22 +14,35 @@
     
   <!-- Bootstrap -->
   {% if site.usecdn %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> <!-- -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   {% else %}
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link  href="{{ site.baseurl }}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!--  <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> <!-- -->
-  <script src="{{ site.baseurl }}/js/jquery.min.js"></script> 
-  <script src="{{ site.baseurl }}/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="{{ site.baseurl }}/lib/jquery.min.js"></script> 
+  <script src="{{ site.baseurl }}/lib/bootstrap/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   {% endif %}
 
   <!-- Bootstrap Theme -->
-  <link rel="stylesheet" href="{{ 'css/bootstrap.cyborg.min.css' | prepend: site.baseurl }}" > <!-- -->
+  <link rel="stylesheet" href="{{ 'lib/bootstrap.cyborg.min.css' | prepend: site.baseurl }}" > <!-- -->
 
 
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
+  
+  <!-- Google Analytics -->
+  {% if site.ga_id %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{site.ga_id}}', 'auto');
+      ga('send', 'pageview');
+    </script>
+  {% endif %}
 
   
 </head>
