--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,5 +1,3 @@
-
-
 .post-content {
   margin: 1em;
   margin-left: 2em;
@@ -21,5 +19,32 @@
 }
 
 .project-screenshot {
-  width: 100%
+  width: 100%;
+  border-radius: 1em;
+}
+
+.project-tile:hover figcaption{
+  visibility: visible;
+}
+
+figure {
+  padding: 1em;
+}
+
+.project-tile figcaption {
+  display: flex;
+  flex-direction:   column;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  margin: 1.5em;
+  visibility: hidden;
+  
+}
+
+.project-tile figcaption *{
+  background-color: blueviolet;
+  padding: 0.5em;
+  align-self: center;
+  border-radius: 1em;
 }
