--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   {% endif %}
 
   <!-- Bootstrap Theme -->
-  <link rel="stylesheet" href="{{ 'lib/bootstrap.cyborg.min.css' | prepend: site.baseurl }}" > <!-- -->
+  <link rel="stylesheet" href="{{ '/lib/bootstrap.cyborg.min.css' | prepend: site.baseurl }}" > <!-- -->
 
 
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
